# Fluidim

./: README.md  pyproject.toml
fluidim/sistema/: __init__.py  nos.py  sistema.py  trechos.py
fluidim/ui/: main_menu.py  main_menu_bar.py  main_menu_buttons.py  main_ui.py  view_conexoes.py  view_trechos.py  viewer.py
