[tool.poetry]
name = "fluidim"
version = "0.1.0"
description = ""
authors = ["João <oliveira.joaovtr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyside6 = "^6.6.1"
loguru = "^0.7.2"
pyqtdarktheme = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
